fixed some spacing in title

--- a/sg-drag-canvas/styles.css
+++ b/sg-drag-canvas/styles.css
@@ -6,4 +6,7 @@ body {
 .blog-writing{
     line-height: 21pt; 
 }
+h1{
+    line-height: 29pt; 
+}
 
